cmake_minimum_required(VERSION 3.9)
project(war2_0)

set(CMAKE_CXX_STANDARD 11)

add_executable(war2_0 main.cpp Warriors.cpp Warriors.h Dragon.cpp Dragon.h crops.cpp crops.h Ninja.cpp Ninja.h Iceman.cpp Iceman.h Lion.cpp Lion.h Wolf.cpp Wolf.h Global.cpp Global.h Weapon.cpp Weapon.h Sword.cpp Sword.h Arrow.cpp Arrow.h Bomb.cpp Bomb.h)